building my first directive

--- a/templates/shared/index.html
+++ b/templates/shared/index.html
@@ -2,5 +2,8 @@
   <h1>Página Inicial</h1>
   <p>Bem vindo a Site/Sistema desenvolvido com AngularJS</p>
   <p>Clica nos itens NavBar para navegar no site</p>
-
+</div>
+<div class='container'>
+  <p ng-bind='app'></p>
+  <input typer='text' ng-model='imWatchingYou' class='form-control' placeholder="I'm watching you!">
 </div>
