--- a/templates/shared/params.html
+++ b/templates/shared/params.html
@@ -1,2 +1,6 @@
 <h1>Route with Params</h1>
-<p>Parametro: <span ng-bind='app'></span></p>
+<p>Parametro: <span ng-bind='params'></span></p>
+
+<div class='container'>
+  <input typer='text' ng-model='imWatchingYou' class='form-control' placeholder="I'm watching you!">
+</div>
